<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreSettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPresettingsActivityInfoForUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pre_settings_activity_info_for_user" />

        <EditText
            android:id="@+id/etPreSettingsAccessKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/et_key_hint"
            android:inputType="number"
            android:maxLength="15" />

        <Button
            android:id="@+id/btnEnterToSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnEnterToSettingsClick"
            android:text="@string/btn_enter_to_settings_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>